# bzd-flux

./: Cargo.toml  README.md
lib/api/: Cargo.toml
lib/migration/: Cargo.toml
lib/migration/src/: entities.rs  lib.rs  m20251218_164925_create_entries.rs  main.rs
settings/: default.toml
src/: app.rs
src/app/: error.rs  feeds.rs  mess.rs  settings.rs  state.rs
src/app/feeds/: grpc.rs  messaging.rs  processing.rs  repo.rs  service.rs  settings.rs  state.rs
src/app/feeds/repo/: entry.rs  task.rs  topic_user.rs
